[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/body/stomach.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Stomach.gd" type="Script" id=4]
[ext_resource path="res://Celinha.tscn" type="PackedScene" id=5]
[ext_resource path="res://CancerCell.tscn" type="PackedScene" id=6]
[ext_resource path="res://BadMolecule.tscn" type="PackedScene" id=7]
[ext_resource path="res://Score.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 6 )

[node name="Stomach" type="Node2D"]
script = ExtResource( 4 )
cancerCell = ExtResource( 6 )
badMolecule = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511, 339 )
scale = Vector2( 0.160962, 0.160944 )
texture = ExtResource( 1 )

[node name="StomachRigidBody" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="StomachImage" type="Sprite" parent="StomachRigidBody"]
position = Vector2( 510, 150 )
scale = Vector2( 0.692256, 0.732987 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StomachRigidBody"]
build_mode = 1
polygon = PoolVector2Array( 434, 313, 402, 346, 384, 376, 377, 409, 376, 412, 320, 424, 287, 444, 274, 464, 280, 488, 291, 503, 312, 520, 344, 536, 368, 544, 394, 551, 453, 554, 494, 547, 552, 528, 584, 512, 624, 483, 648, 458, 673, 426, 689, 403, 707, 364, 720, 328, 724, 301, 725, 273, 720, 243, 715, 223, 705, 206, 694, 193, 678, 182, 655, 170, 623, 158, 599, 155, 575, 153, 543, 157, 511, 166, 481, 183, 457, 208, 448, 248, 448, 272, 452, 298 )

[node name="StomachPosition" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 633, 197 )

[node name="StomachPosition2" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 699, 316 )

[node name="StomachPosition3" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 633, 421 )

[node name="StomachPosition4" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 500, 517 )

[node name="StomachPosition5" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 369, 517 )

[node name="StomachPosition6" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 359, 444 )

[node name="StomachPosition7" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 469, 316 )

[node name="StomachPosition8" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 500, 197 )

[node name="StomachPosition9" type="Position2D" parent="StomachRigidBody/CollisionPolygon2D"]
position = Vector2( 305, 476 )

[node name="SpawnTimer" type="Timer" parent="StomachRigidBody"]
wait_time = 1.5
autostart = true

[node name="Celinha" parent="." instance=ExtResource( 5 )]
position = Vector2( 633, 257 )
scale = Vector2( 1.2, 1.2 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 42.0
theme = SubResource( 5 )
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 8 )]
position = Vector2( -32, -176 )
scale = Vector2( 1.2, 1.2 )

[connection signal="timeout" from="StomachRigidBody/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
